--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+p {
+    font-size: 30px;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 40px;
+}
